Create header component with logo and menu

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,9 @@
-.App {}
+@import "styles/abstracts/variables";
+@import "styles/abstracts/mixins";
+
+@import "styles/base/reset";
+@import "styles/base/core";
+
+@import "styles/components/header";
+@import "styles/components/logo";
+@import "styles/components/menuItem";
