--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,7 @@
 @import "styles/components/header";
 @import "styles/components/logo";
 @import "styles/components/menuItem";
+@import "styles/components/loader";
+@import "styles/components/error";
+
+@import "styles/components/dailyPage";
