--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,9 +1,14 @@
 @mixin header-gradient {
-  background-image: linear-gradient(to right, rgba(000, 0, 0, 0), rgba(000, 0, 0, 1));
+  background-image: linear-gradient(to left, rgba(000, 0, 0, 0), rgba(000, 0, 0, 0.2));
+}
+
+@mixin header-gradient-hover {
+  background-image: linear-gradient(to left, rgba(000, 0, 0, 0), rgba(000, 0, 0, 0.3));
 }
 
 @mixin main-image {
-  background-image: url("../../../public/images/clouds.jpg");
+  background-image: url('../../images/clouds.jpg');
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
 }
