--- a/src/styles/base/_core.scss
+++ b/src/styles/base/_core.scss
@@ -4,6 +4,7 @@ html {
 
 body {
   font-family: $page-font-family;
+  color: $font-color;
 }
 
 *,
@@ -14,4 +15,12 @@ body {
 
 .hidden {
   display: none;
+}
+
+.flex-full-width {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
