--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,4 @@
 .header {
-
-  //background-color: gray;
-
   height: $header-height;
   width: 100%;
   display: flex;
@@ -10,7 +7,9 @@
 
   color: $header-text-color;
 
+  @include header-gradient;
+
   &:hover {
-    @include header-gradient;
+    @include header-gradient-hover;
   }
 }
