--- a/src/styles/components/_menuItem.scss
+++ b/src/styles/components/_menuItem.scss
@@ -1,18 +1,21 @@
 .menu-item {
-
   margin-right: $big-margin;
   display: flex;
   align-items: center;
   border-bottom: 0.125rem solid $transparent-color;
-
-  &:hover {
-    border-color: $primary-color;
-  }
 
   &__link {
     color: $header-text-color;
     text-transform: uppercase;
     letter-spacing: $small-letter-spacing;
     font-size: $font-size-small;
+
+    &--focused {
+      color: $primary-color;
+    }
+  }
+
+  &:hover {
+    border-color: $primary-color;
   }
 }
