Display current weather

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,5 +9,6 @@
 @import "styles/components/menuItem";
 @import "styles/components/loader";
 @import "styles/components/error";
+@import "styles/components/widget";
 
 @import "styles/components/dailyPage";
