--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -37,6 +37,7 @@ $font-weight-heavy: 900;
 $font-size-logo: 1.5rem;
 $font-size-logo-sun: 2rem;
 $font-size-small: 0.875rem;
+$font-size-big: 1.5rem;
 
 $small-letter-spacing: -0.0625rem;
 
@@ -44,13 +45,15 @@ $small-letter-spacing: -0.0625rem;
 
 $primary-color: #fd7d47;
 $secondary-color: #adb5bd;
+$tertiary-color: #000;
 $font-color: #495057;
-$header-text-color: #fff;
+$font-secondary-color: #fff;
 $transparent-color: #00000000;
 $overlay-color: rgba(000, 0, 0, 0.2);
 $white: #fff;
 $danger-color: #f35120;
+$background-color: #efeeea;
 
 // radius
 
-$primary-radius: 0.188rem;
+$primary-radius: 0.25rem;
