--- a/src/styles/components/_menuItem.scss
+++ b/src/styles/components/_menuItem.scss
@@ -5,7 +5,7 @@
   border-bottom: 0.125rem solid $transparent-color;
 
   &__link {
-    color: $header-text-color;
+    color: $font-secondary-color;
     text-transform: uppercase;
     letter-spacing: $small-letter-spacing;
     font-size: $font-size-small;
