--- a/src/styles/base/_core.scss
+++ b/src/styles/base/_core.scss
@@ -24,3 +24,21 @@ body {
   height: 100vh;
   width: 100vw;
 }
+
+.body-header {
+  font-size: $font-size-big;
+  margin: $regular-margin 0;
+  border-bottom: 0.125rem solid $primary-color;
+}
+
+.page {
+  background: $background-color;
+  padding: $page-margin;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+
+
