--- a/src/styles/components/_error.scss
+++ b/src/styles/components/_error.scss
@@ -23,6 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: $font-color;
 
   &__message {
     padding-left: $little-padding;
