--- a/src/App.scss
+++ b/src/App.scss
@@ -11,3 +11,4 @@
 @import "styles/components/error";
 @import "styles/components/widget";
 @import "styles/components/weatherTile";
+@import "styles/components/autocomplete";
