--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-shadow: -0.063rem 0.063rem 0.188rem 0 rgba(209, 209, 209, 1);
 
   color: $font-secondary-color;
   min-height: $header-height;
