--- a/src/styles/components/_menuItem.scss
+++ b/src/styles/components/_menuItem.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   border-bottom: 0.125rem solid $transparent-color;
+  min-height: $header-height;
 
   &__link {
     color: $font-secondary-color;
