Display long term weather forecast

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,3 +12,5 @@
 @import "styles/components/widget";
 @import "styles/components/weatherTile";
 @import "styles/components/autocomplete";
+
+@import "styles/components/longTermWeatherPage";
