--- a/src/styles/components/_autocomplete.scss
+++ b/src/styles/components/_autocomplete.scss
@@ -6,8 +6,8 @@
 
   &__input {
     line-height: inherit;
-    max-height: 2rem;
-    min-width: 12rem;
+    height: 2rem;
+    min-width: 10rem;
     padding: 0 $small-padding;
     outline: none;
     border-radius: $primary-radius;
