--- a/src/styles/base/_core.scss
+++ b/src/styles/base/_core.scss
@@ -25,6 +25,13 @@ body {
   width: 100vw;
 }
 
+.flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 .body-header {
   font-size: $font-size-big;
   margin: $regular-margin 0;
@@ -33,11 +40,20 @@ body {
 
 .page {
   background: $background-color;
-  padding: $page-margin-small $page-margin;
+  padding: $page-padding-small $page-padding;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+
+  @media (max-width: $breakpoint-desktop) {
+    padding: $page-padding-small;
+    align-items: center;
+  }
+
+  @media (max-width: $breakpoint-tablet) {
+    padding: $page-padding-small $page-padding-tablet;
+  }
 }
 
 
