--- a/src/styles/components/_longTermWeatherPage.scss
+++ b/src/styles/components/_longTermWeatherPage.scss
@@ -3,4 +3,9 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
+
+  @media (max-width: $breakpoint-desktop) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
